# actions-demo

./: CMakeLists.txt  README.md
.github/workflows/: run-tests.yml
include/src/: mymath.h
include/tests/: harness.h
src/: main.c  mymath.c
tests/: main.c  tests.c
